--- a/index.html
+++ b/index.html
@@ -72,6 +72,70 @@
 </div>
 </div>
      </section>
+     <section class="container flex grow">
+        <h2 class="grow_title">
+        Grow 2.5x faster than your competitors.
+        </h2>
+        <div class="grow_flex">
+          <div class="grow_element">
+            <img src="./img/grow_1.png" alt="grow_1">
+            <div class="grow_item">
+                <h3 class="grow_pretitle">
+                    RIVER ISLAND
+                </h3>
+                <p class="grow_text">
+                    River Island transforms the customer experience with personalization.
+                </p>
+            </div>
+           </div>  
+           <div class="grow_element">
+            <img src="./img/sky.png" alt="sky">
+            <div class="grow_item">
+                <h3 class="grow_pretitle">
+                    RIVER ISLAND
+                </h3>
+                <p class="grow_text">
+                    River Island transforms the customer experience with personalization.
+                </p>
+            </div>
+           
+          </div>  
+        </div>
+     </section>
+    <section class="container frame">
+        <h2 class="frame_title">
+            Qubit CommerceAI.
+        </h2>
+        <div class="flex">
+            <div>
+            <img src="./img/Frame 1.svg" alt="frame 1">
+            <h5 class="frame_pretitle">
+                More insight
+            </h5>
+            <p class="frame_text">
+                Learn which products drive performance and which don't, through automated insights you can action.
+            </p>
+            </div>
+            <div>
+                <img src="./img/Frame 2.png" alt="frame 2">
+                <h5 class="frame_pretitle">
+                    More personal
+                </h5>
+                <p class="frame_text">
+                    Qubit CommerceAI generates a model per shopper to make every customer interaction more relevant.
+                </p>
+                </div>
+                <div>
+                    <img src="./img/Frame 3.png" alt="frame 3">
+                    <h5 class="frame_pretitle">
+                        More effective
+                    </h5>
+                    <p class="frame_text">
+                        Qubit fuses data, intent, and design tools to enable your team to create more effective customer experiences.
+                    </p>
+                    </div>
+        </div>
+    </section>
    <footer class="footer">
     <div class="container flex">
 
